# AI-Finance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.toml  config.toml.example  pyproject.toml
docs/: DATA_SOURCES.md  DEV_NOTES.md  ROADMAP.md  USAGE.md
fa/: __init__.py  agent.py  cli.py  config.py  consolidate.py  docx_render.py  framework.py  memory.py  note_extractor.py  note_template.py  report.py  review_v2.py  sectors.py  vet.py
fa/agents/: __init__.py  conflict.py  critic.py  recall.py  reflector.py
fa/chat/: __init__.py  knowledge.py  repl.py  resolver.py  tools.py
fa/cot/: __init__.py  loader.py  local_ops.py  merger.py  scorer.py  stats.py  voter.py
fa/ingest/: __init__.py  base.py  cot_extractor.py  runner.py  user_note.py
fa/ingest/loaders/: docx.py  pdf.py  pptx.py  text.py  xlsx.py
fa/memory/: __init__.py  evolution.py  performance.py  predictions.py  situations.py  store.py
fa/tools/: announcements.py  data.py  sector.py
memory/: sectors.yaml
memory/framework/: checklist.md  red-flags.md  review-rules.md  valuation.md
memory/framework/frameworks/: imacompnerd-theta.md  leopold-bottleneck.md  serenity-chokepoint.md
memory/situations/: MEMORY.md
scripts/: sync_setup.ps1  sync_setup.sh
